tests/snapshots/generate_graph__package_bin__fail__package_multi_target.snap
---
source: tests/generate_graph.rs
expression: output

---
STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_multi_target


STDOUT:

