tests/snapshots/generate_graph__package_bin__fail__workspace_multi_package.snap
---
source: tests/generate_graph.rs
expression: output
---
STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_bin_target
- package_lib_target
- package_multi_target
- workspace_multi_package


STDOUT:

